syntax = "proto3";

option csharp_namespace = "BackOfficeService";

service DBServer {
    rpc Register (RegisterReq) returns (RegisterRes);
}

message RegisterReq {
	string id = 1;
	string username = 2;
	string email = 3;
	string password = 4;
	bool emailverified = 5;
}

message RegisterRes {
	string username = 1;
	int32 status_code = 2;
}